Fixed overflow styling issues, initial work for SqliteFormatter

--- a/app/styles/QueryPage.scss
+++ b/app/styles/QueryPage.scss
@@ -1,7 +1,15 @@
 .QueryPage {
-  // contain: strict;
+  overflow: hidden;
 
   .ace-xcode .ace_gutter {
     background: white;
+  }
+
+  .QueryPage--actions-container {
+    border: 1px solid red;
+
+    .QueryPage--actions-container-child {
+      border: 1px solid green;
+    }
   }
 }
