--- a/app/styles/Structure.scss
+++ b/app/styles/Structure.scss
@@ -6,6 +6,7 @@
 
   .ReactTable {
     background: white;
+    overflow: scroll;
 
     .search-bar {
       margin: 20px;
